--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
-  - gcloud config set project multik8s-295919
-  - gcloud config set compute/zone europe-west1-b
+  - gcloud config set project multik8s-297419
+  - gcloud config set compute/zone europe-west1-c
   - gcloud container clusters get-credentials multi-cluster
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t bohdanleshchyshyn/react-test -f ./client/Dockerfile.dev ./client
